--- a/raidboss20241014.html
+++ b/raidboss20241014.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Башня бед жёлтая Барьер беды</title>
+    <title>Команды на Рейдбосса (Зул'Кари, капитан закатный совомедведь)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Команды на башни бед (жёлтый, капитан - Барьер Беды)</h1>
+<h1>Команды на Рейдбосса (Зул'Кари, капитан закатный совомедведь)</h1>
 <div id="codes">
     <code>[1353,7458,7560,7328,3066,1,3,1,2,2,1,2,14009]</code>
     <code>[1544,6555,7560,7328,3066,2,2,1,1,3,3,1,14033]</code>
