--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     <li><a href="raidboss20241014.html">Рейд босс (Зул'Кари)</a></li>
     <li><a href="pvp20241014.html">ПВП</a></li>
 </ul>
+<h1>21.10.2024</h1>
+<ul>
+    <li><a href="journey-20241021.html">Путешествие (Кентавр, жёлтый, капитан - Зебратавр)</a></li>
+    <li><a href="holiday-event-2024-10.html">Праздничное событие - Зловещий праздник (фиолетовый)</a></li>
+    <li><a href="pvp20241021.html">ПВП</a></li>
+    <li><a href="faction-wild-court.html">Фракция - Дикий Двор</a></li>
+    <li><a href="faction-the-labyrinth.html">Фракция - Лабиринт</a></li>
+</ul>
 </body>
 </html>
