Fixed some warnings

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>Событе недели - вторжение. Капитан события Гном-Надзиратель удваивает очки при нахождении в команде. Войска с открытым навыком Стенолом наносят повышенный урон по башням</p>
 <p><strong style="color:#c92134">Обязательно:</strong> купить в магазине события войско Гном-надзиратель, использовать его в боях события. Отбить все знаки события</p>
 <p>Желательно: дать Гному-надзирателю навык Стенолом, возвысить его до мифического или на сколько получится (усиление урона по башням). Купить в магазине события оружие Подрыватель.</p>
-<a href="teams.html?combo=Вторжение-капитан Гном-Надзиратель#teams">Команды на Вторжение - капитан Гном-Надзиратель</a>
+<a href="teams.html?combo=Вторжение-капитан Гном-Надзиратель">Команды на Вторжение - капитан Гном-Надзиратель</a>
 <h2>Вторник. Нападение на фракцию - Импириназар</h2>
 <p>Оружие только для коллекции, можно не тратиться.</p>
 <p>Желательно: пройти до сбора всех наград. Обычно для этого достаточно выкупить 2 магазина события.</p>
@@ -23,7 +23,7 @@
   <li><a href="teams.html?combo=Фракция желто-коричневый">Команды Импириназар желто-коричневый</a></li>
   <li><a href="teams.html?combo=Фракция желтый">Команды на Импириназар желтый</a></li>
   <li><a href="teams.html?combo=Фракция коричневый">Команды на Импириназар коричневый</a></li>
-  <li><a href="teams.html?combo=Импириназар#teams">Команды на Импириназар 500й</a></li>
+  <li><a href="teams.html?combo=Импириназар">Команды на Импириназар 500й</a></li>
 </ul>
 
 <h2>Среда. Спасение питомца. Крохобород</h2>
@@ -39,7 +39,7 @@
 <h2>Всю неделю - Подшпиль</h2>
 <p>Желательно: отбить все бесплатные факелы, найти 2-го босса, на него применить фонарь.</p>
 <p>Хардкор: найти больше боссов или пройти до конца - нужно тратить алмазы.</p>
-<a href="teams.html?combo=Подшпиль-Казиел#teams">Команды на Подшпиль Казиел</a>
+<a href="teams.html?combo=Подшпиль-Казиел">Команды на Подшпиль Казиел</a>
 <h2>Всю неделю - ПВП</h2>
 <p>Желательно: набить 6500 ОП и собрать награды в ПВП-целях. Ежедневно в усилениях одну башню поднять до 5 уровня для пвп целей. Ежедневно, кроме среды и воскресенья отбить все битвы цитаделей в одной из локаций. Ежедневно, кроме четверга и понедельника отбить битвы, где в бонусе региона дают золотые марки (только для альянас Темный орден). Добить битвы, чтобы поймать 3 ворона (восстановить знаки монолита).</p>
 <p>Хардкор: максимально выполнить цели ПВП-сезона.</p>
