--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>Четверг. Событие класса. Жрец рун</h2>
 <p>Желательно: отбить все бесплатные бои, если класс не на максимуме. Нет смысла тратить алмазы, классы можно качать бесплатно.</p>
 <h2>Пятница-воскресенье. Нажива</h2>
-<p>Желательно: выкупить войско наживы. Проходить по желанию, в целом затраченные усилия не соответствуют награде. Присутствие капитана наживы и других войск с навыком Грабитель увеличивает очки от события (навык надо открыть, мойска максимально возвысить)</p>
+<p>Желательно: выкупить войско наживы. Проходить по желанию, в целом затраченные усилия не соответствуют награде. Присутствие капитана наживы и других войск с навыком Грабитель увеличивает очки от события (навык надо открыть, войска максимально возвысить)</p>
 <h2>Воскресенье</h2>
 <p><strong style="color:#c92134">Обязательно:</strong> Игры - Подземелье. В воскресенье предложениях подземелий выкупить Россыпь камней за 50 алмазов (получаем бриллианты недорого) и отбить все битвы в подземельях. В другие дни недели тоже самое по желанию и необходимости.</p>
 <h2>Всю неделю - Неделя юбилея</h2>
