Добавлена информация о событиях в неделю 11.11

--- a/index.html
+++ b/index.html
@@ -9,44 +9,58 @@
 </head>
 <body>
 
-<h1>Команды для недели 04.11.2024</h1>
+<h1>Команды для недели 11.11.2024</h1>
 <h2>Событие недели</h2>
-<p>Событе недели - вторжение. Капитан события Гном-Надзиратель удваивает очки при нахождении в команде. Войска с открытым навыком Стенолом наносят повышенный урон по башням</p>
-<p><strong style="color:#c92134">Обязательно:</strong> купить в магазине события войско Гном-надзиратель, использовать его в боях события. Отбить все знаки события</p>
-<p>Желательно: дать Гному-надзирателю навык Стенолом, возвысить его до мифического или на сколько получится (усиление урона по башням). Купить в магазине события оружие Подрыватель.</p>
-<a href="teams.html?combo=Вторжение-капитан Гном-Надзиратель">Команды на Вторжение - капитан Гном-Надзиратель</a>
-<h2>Вторник. Нападение на фракцию - Импириназар</h2>
+<p>Событие недели - Башня бед (красная). Капитан события - оружие Стена Беды.</p>
+
+<p><strong style="color:#c92134">Обязательно:</strong> купить в магазине оружие события Стена Беды (4 магазина, итого 500 алмазов). Отбить все знаки события по схеме.</p>
+<p>Чтобы пройти этаж надо найти свиток открытия, есть и другие полезные свитки. Этажи одинаковые для всех в гильдии.</p>
+<p>Прежде, чем бить новый этаж спрашиваем, есть ли кто в разведке, просто так не несёмся, бережём знаки. Это полезно для всей гильдии.</p>
+<p>Разведчик обязательно проходит ВСЕ комнаты на этаже. Даёт отчёт в формате 2-3, 5 ускор.</p>
+<p>Это расшифровывается так - на 2-м этаже свиток открытия в 3-й комнате и ещё свиток ускорения в 5-й.</p>
+<p>Остальные не торопятся, идут следом за разведчиком только по полезным комнатам.</p>
+<p>Полезные: открытие, ускорение, удача (2 очка за этаж!!!), героизм, огн.шар</p>
+<p>Свитки на ап оружия дают до 25-го этажа, дальше только докупка за алмазы.</p>
+<p>Докупаем на ап бедового оружия кто сколько может, не жалейте алмазы, башни бед происходят раз в 5 недель, 6 цветов, порядок случайный, т.е. между повторами цвета может пройти больше года.</p>
+<p>Полный ап одного оружия = 25 бесплатных свитков + 2850 алмазов (3 ластпака). Но сейчас достаточно вкачать свитками 7 уровней, а далее добавить три сферы, тогда свитков от покупки оружия-капитана + бесплатные как раз хватает на прокачку одного бедового оружия полностью.</p>
+<p>ВАЖНО ДЛЯ НОВИЧКОВ! Не тратьте свитки на новое оружие из магазина, когда-нибудь вы купите полезную бедовую оружку (дубину, книжку) и заточите её.</p>
+<p>В этой серии башен новый тип оружия - щиты, не особо интересны, так что их не точим.</p>
+<ul>
+  <li><a href="teams.html?combo=Башня-бед красный Стена-Беды">Команды Башня бед красный (Стена Беды)</a></li>
+</ul>
+<h2>Вторник. Нападение на фракцию - Сочащиеся пещеры</h2>
 <p>Оружие только для коллекции, можно не тратиться.</p>
 <p>Желательно: пройти до сбора всех наград. Обычно для этого достаточно выкупить 2 магазина события.</p>
 <p>Хардкор высшего порядка: пройти до 500 и победить командой фракции за один день (не рекомендуется, т.к. фракция лёгкая)</p>
 <ul>
-  <li><a href="teams.html?combo=Фракция желто-коричневый">Команды Импириназар желто-коричневый</a></li>
-  <li><a href="teams.html?combo=Фракция желтый">Команды на Импириназар желтый</a></li>
-  <li><a href="teams.html?combo=Фракция коричневый">Команды на Импириназар коричневый</a></li>
-  <li><a href="teams.html?combo=Импириназар">Команды на Импириназар 500й</a></li>
+  <li><a href="teams.html?combo=Фракция зелено-синий">Команды Сочащиеся пещеры зелено-синий</a></li>
+  <li><a href="teams.html?combo=Фракция зеленый">Команды на Сочащиеся пещеры зеленый</a></li>
+  <li><a href="teams.html?combo=Фракция синий">Команды на Сочащиеся пещеры синий</a></li>
+  <li><a href="teams.html?combo=Сочащиеся пещеры">Команды на Сочащиеся пещеры 500й</a></li>
 </ul>
-
-<h2>Среда. Спасение питомца. Крохобород</h2>
+<h2>Среда. Спасение питомца. Жадновый тортень</h2>
 <p>Желательно: отбить все бои для спасения питомца. Питомцы крайне важны для мощи городов.</p>
-<h2>Четверг. Событие класса. Жрец рун</h2>
+<h2>Четверг. Событие класса. Варвар</h2>
 <p>Желательно: отбить все бесплатные бои, если класс не на максимуме. Нет смысла тратить алмазы, классы можно качать бесплатно.</p>
-<h2>Пятница-воскресенье. Нажива</h2>
-<p>Желательно: выкупить войско наживы. Проходить по желанию, в целом затраченные усилия не соответствуют награде. Присутствие капитана наживы и других войск с навыком Грабитель увеличивает очки от события (навык надо открыть, войска максимально возвысить)</p>
+<h2>Пятница-воскресенье. Арена</h2>
+<p>Самое бесполезное событие по соотношению затрат сил и награды. Хороший бонус арены - много кубков для гильдии. Суть события - выберите лучшие войска из предложенных и сразитесь полученой командой с противниками</p>
 <h2>Воскресенье</h2>
 <p><strong style="color:#c92134">Обязательно:</strong> Игры - Подземелье. В воскресенье предложениях подземелий выкупить Россыпь камней за 50 алмазов (получаем бриллианты недорого) и отбить все битвы в подземельях. В другие дни недели тоже самое по желанию и необходимости.</p>
 <h2>Всю неделю - Неделя юбилея</h2>
-<p>Побеждайте коричневых врагов, собирайте награды. Заходим ежедневные задания, внизу Еженедельный прогресс, не забываем собирать там награды. За выполнение всех заданий прогресса получаем карту (нужно успеть за неделю). За 4 недели получаем 4 карты и сможем обменять на новое мифическое войско Повелитель Драконов Лютер</p>
+<p>Побеждайте врагов указанного цвета, собирайте награды. Заходим ежедневные задания, внизу Еженедельный прогресс, не забываем собирать там награды. За выполнение всех заданий прогресса получаем карту (нужно успеть за неделю). За 4 недели получаем 4 карты и сможем обменять на новое мифическое войско Повелитель Драконов Лютер</p>
 <h2>Всю неделю - Подшпиль</h2>
 <p>Желательно: отбить все бесплатные факелы, найти 2-го босса, на него применить фонарь.</p>
 <p>Хардкор: найти больше боссов или пройти до конца - нужно тратить алмазы.</p>
-<a href="teams.html?combo=Подшпиль-Казиел">Команды на Подшпиль Казиел</a>
+<a href="teams.html?combo=Подшпиль-Грош-нак">Команды на Подшпиль Грош-Нак</a>
+<h2>Всю неделю - эпические битвы в королевстве Грош-Нак</h2>
+<p>Награда за эпические битвы - питомец Звёздная Вивернушка (за награду нужно отдать алмазы). Рекомендуется получить хотя бы 15 копий питомца.</p>
 <h2>Всю неделю - ПВП</h2>
 <p>Желательно: набить 6500 ОП и собрать награды в ПВП-целях. Ежедневно в усилениях одну башню поднять до 5 уровня для пвп целей. Ежедневно, кроме среды и воскресенья отбить все битвы цитаделей в одной из локаций. Ежедневно, кроме четверга и понедельника отбить битвы, где в бонусе региона дают золотые марки (только для альянас Темный орден). Добить битвы, чтобы поймать 3 ворона (восстановить знаки монолита).</p>
 <p>Хардкор: максимально выполнить цели ПВП-сезона.</p>
 <p>Покупать в магазине ПВП: за серебряные марки - питомцев, за злотые марки - драконит и книги дарственных.</p>
 <ul>
   <li><a href="teams.html?combo=PVP желтый">Команды на PVP желтый</a></li>
-  <li><a href="teams.html?combo=PVP фиолетовый">Команды на PVP фиолетовый</a></li>
+  <li><a href="teams.html?combo=PVP синий">Команды на PVP синий</a></li>
   <li><a href="teams.html?combo=PVP зеленый">Команды на PVP зеленый</a></li>
 </ul>
 </body>
